[package]
name = "mesh_mancer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = {path = "../eframe-0.28.1-clone", features = ["glow"]}
three-d = {version = "0.17.0", features = ["headless"]}

egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for